kompose-files/hello-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-files
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: hello-service
  name: hello-service
spec:
  replicas: 5
  selector:
    matchLabels:
      io.kompose.service: hello-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kompose-files
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/example-network: "true"
        io.kompose.service: hello-service
    spec:
      containers:
        - env:
            - name: PORT
              value: "3456"
          image: santiestra/kube-hello-service
          name: hello-service
          resources: {}
      restartPolicy: Always
status: {}
