kompose-files/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kompose-files
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 3456
  selector:
    io.kompose.service: api-gateway
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: localhost
