kompose-files/hello-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    io.kompose.service: hello-service
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3456
